# CooperBench

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  test_gemini.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yaml  lint.yml  mypy.yml  pre-commit.yml  test.yml
dataset/: README.md
dataset/dottxt_ai_outlines_task/task1371/: Dockerfile  run_tests.sh  runner.sh  setup.sh  test_features.sh
dataset/dottxt_ai_outlines_task/task1655/: Dockerfile  run_tests.sh  runner.sh  setup.sh  test_features.sh
dataset/dottxt_ai_outlines_task/task1706/: Dockerfile  run_tests.sh  runner.sh  setup.sh  test_features.sh
dataset/dspy_task/task8394/: Dockerfile  run_tests.sh  runner.sh  setup.sh
dataset/dspy_task/task8563/: Dockerfile  run_tests.sh  runner.sh  setup.sh
dataset/dspy_task/task8587/: run_tests.sh  runner.sh  setup.sh
dataset/dspy_task/task8635/: Dockerfile  combined.patch  run_tests.sh  runner.sh  setup.sh
dataset/go_chi_task/task26/: runner.sh  setup.sh  (+1 more)
dataset/openai_tiktoken_task/: check_merge_conflicts.sh
docs/: GCP_SETUP.md  QUICK_START_GCP.md  index.md
docs/api/: core.md  llm.md  planning.md
docs/concepts/: design.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: evaluation.md  execution.md
scripts/: build_gcp_vm_image.sh
src/cooperbench/: __about__.py  __init__.py  cli.py  config.py  evaluator.py  runner.py  sandbox.py  utils.py
tests/: conftest.py  test_agents.py  test_cli.py  test_evaluator.py  test_evaluator_integration.py  test_package.py  test_runner.py  test_runner_integration.py  test_sandbox.py  test_smoke.py  test_utils.py
tests/connectors/: __init__.py  test_git.py  test_messaging.py
tests/eval/: test_orchestrator.py  test_runs.py
tests/integration/: test_docker_git.py  test_evaluator.py  test_gcp_git.py  test_git.py  test_runner.py  test_sandbox.py
tests/runner/: test_orchestrator.py  test_tasks.py
tests/unit/: test_evaluator.py  test_runner.py
(+674 files in other folders)
